[package]
name = "kumori-lambda-rs-fir"
version = "0.1.0"
publish = false
rust-version = "1.71"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1.0" }
aws_lambda_events = { version = "0.10", default-features = false, features = ["apigw"] }
aws-config = { version = "0.56" }
aws-sdk-s3 = { version = "0.29" }
fast_image_resize = { version = "2.7" }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
lambda_runtime = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.29", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
