[package]
name = "kumori-measure"
version = "0.1.0"
publish = false
rust-version = "1.71"
edition = "2021"
license = "MIT"

[dependencies]
futures = { version = "0.3.28" }
reqwest = { version = "0.11" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.104" }
tokio = { version = "1.29", features = ["full"] }
